--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,43 +1,74 @@
 steps:
-# Step 1: Set up MongoDB VM
+# Step 1: MongoDB Setup
 - name: 'gcr.io/cloud-builders/gcloud'
-  id: 'setup-mongodb'
+  id: 'mongodb-setup'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    gcloud builds submit --config=mongodb-setup.yaml \
-      --substitutions=_PROJECT_ID=${_PROJECT_ID},_ZONE=${_ZONE},_MACHINE_TYPE=${_MACHINE_TYPE} \
-      || (echo "MongoDB setup failed"; exit 1)
+    gcloud builds submit --config=mongodb-setup.yaml
 
-# Step 2: Set up GKE cluster
+# Step 2: GKE Setup
 - name: 'gcr.io/cloud-builders/gcloud'
-  id: 'setup-gke'
+  id: 'gke-setup'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    gcloud builds submit --config=gke-setup.yaml \
-      --substitutions=_PROJECT_ID=${_PROJECT_ID},_ZONE=${_ZONE},_CLUSTER_NAME=${_CLUSTER_NAME},_NODE_COUNT=${_NODE_COUNT} \
-      || (echo "GKE setup failed"; exit 1)
+    gcloud builds submit --config=gke-setup.yaml
 
-# Step 3: Deploy application
+# Step 3: Get GKE credentials
 - name: 'gcr.io/cloud-builders/gcloud'
-  id: 'deploy-app'
+  id: 'get-credentials'
+  args:
+  - 'container'
+  - 'clusters'
+  - 'get-credentials'
+  - '${_CLUSTER_NAME}'
+  - '--zone=${_ZONE}'
+  - '--project=${PROJECT_ID}'
+
+# STraefik Setup
+- name: 'gcr.io/cloud-builders/kubectl'
+  id: 'traefik-setup'
+  args: ['apply', '-f', 'traefik-config.yml']
+
+# Step 4: Build and push Docker image
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'build-image'
+  args: ['build', '-t', 'gcr.io/${PROJECT_ID}/tasky-app:v1', '.']
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'push-image'
+  args: ['push', 'gcr.io/${PROJECT_ID}/tasky-app:v1']
+
+# Step 5: Create Kubernetes secret
+- name: 'gcr.io/cloud-builders/kubectl'
+  id: 'create-secret'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    gcloud builds submit --config=app-deploy.yaml \
-      --substitutions=_PROJECT_ID=${_PROJECT_ID},_ZONE=${_ZONE},_CLUSTER_NAME=${_CLUSTER_NAME} \
-      || (echo "App deployment failed"; exit 1)
+    kubectl create secret generic mongodb-secret \
+      --from-literal=uri="mongodb://admin:$$MONGODB_PASSWORD@$(gcloud compute instances describe mongodb-vm --zone=${_ZONE} --format='get(networkInterfaces[0].networkIP)'):27017/admin" \
+      --dry-run=client -o yaml | kubectl apply -f -
+  secretEnv: ['MONGODB_PASSWORD']
+
+# Apply Kubernetes Deployment
+- name: 'gcr.io/cloud-builders/kubectl'
+  id: 'apply-k8s-deployment'
+  args:
+  - 'apply'
+  - '-f'
+  - 'k8s-deployment.yml'
 
 substitutions:
-  _PROJECT_ID: ${PROJECT_ID}
   _ZONE: us-central1-a
-  _MACHINE_TYPE: f1-micro
   _CLUSTER_NAME: tasky-cluster
-  _NODE_COUNT: "3"
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/${PROJECT_ID}/secrets/mongodb-password/versions/latest
+    env: 'MONGODB_PASSWORD'
 
 options:
   logging: CLOUD_LOGGING_ONLY
