--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -104,36 +104,31 @@ steps:
   - '-f'
   - 'k8s-deployment.yml'
 
-# Cleanup Step
+# Cleanup step
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'cleanup'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    if [ $STATUS != "SUCCESS" ]; then
-      echo "Build failed. Cleaning up resources..."
-      
-      # Delete GKE cluster
-      gcloud container clusters delete ${_CLUSTER_NAME} \
-        --zone=${_ZONE} \
-        --project=${PROJECT_ID} \
-        --quiet
+    echo "Cleaning up resources..."
+    
+    # Delete GKE cluster
+    gcloud container clusters delete ${_CLUSTER_NAME} \
+      --zone=${_ZONE} \
+      --project=${PROJECT_ID} \
+      --quiet || true
 
-      # Delete MongoDB VM
-      gcloud compute instances delete mongodb-vm \
-        --zone=${_ZONE} \
-        --project=${PROJECT_ID} \
-        --quiet
+    # Delete MongoDB VM
+    gcloud compute instances delete mongodb-vm \
+      --zone=${_ZONE} \
+      --project=${PROJECT_ID} \
+      --quiet || true
 
-      # Delete backup bucket
-      gsutil rm -r gs://${_BACKUP_BUCKET} || true
+    # Delete backup bucket
+    gsutil rm -r gs://${_BACKUP_BUCKET} || true
 
-      echo "Cleanup completed."
-    else
-      echo "Build successful. No cleanup needed."
-    fi
-  waitFor: ['-']
+    echo "Cleanup completed."
 
 substitutions:
   _ZONE: us-central1-a
@@ -144,3 +139,5 @@ substitutions:
 
 options:
   logging: CLOUD_LOGGING_ONLY
+
+timeout: 3600s
