--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -74,7 +74,7 @@ steps:
   - '-c'
   - |
     kubectl config view
-    kubectl apply -f traefik-config.yml
+    kubectl apply -f traefik-config.yaml
 
 # Step 7: Build and push Docker image
 - name: 'gcr.io/cloud-builders/docker'
@@ -102,7 +102,7 @@ steps:
   args:
   - 'apply'
   - '-f'
-  - 'k8s-deployment.yml'
+  - 'k8s-deployment.yaml'
 
 # Cleanup step
 - name: 'gcr.io/cloud-builders/gcloud'
