--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,14 +19,21 @@ steps:
   args:
   - '-c'
   - |
+    set -e  # Exit immediately if a command exits with a non-zero status
+    set -x  # Print commands and their arguments as they are executed
+
     gcloud compute ssh mongodb-vm --zone ${_ZONE} --command "
-    sudo apt-get update && \
-    wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add - && \
-    echo 'deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse' | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list && \
-    sudo apt-get update && \
-    sudo apt-get install -y mongodb-org && \
-    sudo systemctl start mongod && \
+    sudo mkdir -p /var/lib/apt/lists/partial
+    sudo apt-get clean
+    sudo apt-get update -y
+    sudo apt-get install -y gnupg curl
+    curl -fsSL https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -
+    echo 'deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse' | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list
+    sudo apt-get update -y
+    sudo apt-get install -y mongodb-org
+    sudo systemctl start mongod
     sudo systemctl enable mongod
+    sudo systemctl status mongod
     "
 
 # Step 3: Setup MongoDB Auth
