--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -73,27 +73,35 @@ steps:
       --zone=${_ZONE} \
       --project=${PROJECT_ID}
 
-# Step 6: Build and push Docker image
+# Step 6: Clone Tasky repository
+- name: 'gcr.io/cloud-builders/git'
+  id: 'clone-tasky-repo'
+  args: ['clone', 'https://github.com/jeffthorne/tasky.git']
+
+# Step 7: Build and push Docker image
 - name: 'gcr.io/cloud-builders/docker'
-  id: 'build-image'
-  args: ['build', '-t', 'gcr.io/${PROJECT_ID}/tasky-app:v1', '.']
+  id: 'build-push-image'
+  args: ['build', '-t', 'gcr.io/${PROJECT_ID}/tasky-app:v1', './tasky']
 - name: 'gcr.io/cloud-builders/docker'
   id: 'push-image'
   args: ['push', 'gcr.io/${PROJECT_ID}/tasky-app:v1']
 
-# Step 7: Create Kubernetes secret
+# Step 8: Create Kubernetes secrets
 - name: 'gcr.io/cloud-builders/kubectl'
-  id: 'create-secret'
+  id: 'create-secrets'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
     MONGODB_PASSWORD=$(gcloud secrets versions access latest --secret=mongodb-password)
-    kubectl create secret generic mongodb-secret \
-      --from-literal=uri="mongodb://admin:$${MONGODB_PASSWORD}@$(gcloud compute instances describe mongodb-vm --zone=${_ZONE} --format='get(networkInterfaces[0].networkIP)'):27017/admin" \
+    MONGODB_URI="mongodb://admin:$${MONGODB_PASSWORD}@$(gcloud compute instances describe mongodb-vm --zone=${_ZONE} --format='get(networkInterfaces[0].networkIP)'):27017/admin"
+    SECRET_KEY=$(gcloud secrets versions access latest --secret=jwt-secret-key)
+    kubectl create secret generic tasky-secrets \
+      --from-literal=MONGODB_URI="$${MONGODB_URI}" \
+      --from-literal=SECRET_KEY="$${SECRET_KEY}" \
       --dry-run=client -o yaml | kubectl apply -f -
 
-# Step 8: Apply combined Kubernetes configuration
+# Step 9 Apply Kubernetes configuration
 - name: 'gcr.io/cloud-builders/kubectl'
   id: 'apply-k8s-config'
   entrypoint: 'bash'
@@ -102,15 +110,7 @@ steps:
   - |
     set -e
     set -x
-    echo "Current working directory:"
-    pwd
-    echo "Contents of current directory:"
-    ls -la
-    echo "Kubernetes cluster info:"
-    kubectl cluster-info
-    echo "Current Kubernetes context:"
-    kubectl config current-context
-    echo "Applying combined Kubernetes configuration:"
+    echo "Applying Kubernetes configuration:"
     kubectl apply -f combined-k8s-config.yaml
     echo "Verifying deployments:"
     kubectl get deployments --all-namespaces
