--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,27 +1,36 @@
 steps:
-# Step 1: MongoDB Setup
+# Step 1: Check, delete if exists, and recreate MongoDB VM
 - name: 'gcr.io/cloud-builders/gcloud'
-  id: 'create-mongodb-vm'
+  id: 'manage-mongodb-vm'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
+    set -e
+    if gcloud compute instances describe mongodb-vm --zone=${_ZONE} &>/dev/null; then
+      echo "MongoDB VM exists. Deleting..."
+      gcloud compute instances delete mongodb-vm --zone=${_ZONE} --quiet
+      echo "Waiting for VM deletion..."
+      while gcloud compute instances describe mongodb-vm --zone=${_ZONE} &>/dev/null; do
+        sleep 5
+      done
+    fi
+    echo "Creating MongoDB VM..."
     gcloud compute instances create mongodb-vm \
     --image-family ubuntu-2004-lts \
     --image-project ubuntu-os-cloud \
     --machine-type ${_MACHINE_TYPE} \
     --zone ${_ZONE}
 
-# Step 2: Install MongoDB
+# Step 2: Install MongoDB 
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'install-mongodb'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    set -e  # Exit immediately if a command exits with a non-zero status
-    set -x  # Print commands and their arguments as they are executed
-
+    set -e
+    set -x
     gcloud compute ssh mongodb-vm --zone ${_ZONE} --command "
     sudo mkdir -p /var/lib/apt/lists/partial
     sudo apt-get clean
@@ -36,7 +45,7 @@ steps:
     sudo systemctl status mongod
     "
 
-# Step 3: Setup MongoDB Auth
+# Step 3: Setup MongoDB Auth 
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'setup-mongodb-auth'
   entrypoint: 'bash'
@@ -50,19 +59,38 @@ steps:
     sudo systemctl restart mongod
     "
 
-# Step 4: Create Backup Bucket
+# Step 4: Check, delete if exists, and recreate Backup Bucket
 - name: 'gcr.io/cloud-builders/gsutil'
-  id: 'create-backup-bucket'
-  args: ['mb', '-p', '${PROJECT_ID}', 'gs://${_BACKUP_BUCKET}']
-
-# Step 5: GKE Setup
-- name: 'gcr.io/cloud-builders/gcloud'
-  id: 'create-gke-cluster'
+  id: 'manage-backup-bucket'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
     set -e
+    if gsutil ls -b gs://${_BACKUP_BUCKET} &>/dev/null; then
+      echo "Backup bucket exists. Deleting..."
+      gsutil rm -r gs://${_BACKUP_BUCKET}
+    fi
+    echo "Creating backup bucket..."
+    gsutil mb -p ${PROJECT_ID} gs://${_BACKUP_BUCKET}
+
+# Step 5: Check, delete if exists, and recreate GKE Cluster
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'manage-gke-cluster'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    set -e
+    if gcloud container clusters describe ${_CLUSTER_NAME} --zone=${_ZONE} --project=${PROJECT_ID} &>/dev/null; then
+      echo "GKE cluster exists. Deleting..."
+      gcloud container clusters delete ${_CLUSTER_NAME} --zone=${_ZONE} --project=${PROJECT_ID} --quiet
+      echo "Waiting for cluster deletion..."
+      while gcloud container clusters describe ${_CLUSTER_NAME} --zone=${_ZONE} --project=${PROJECT_ID} &>/dev/null; do
+        sleep 5
+      done
+    fi
+    echo "Creating GKE cluster..."
     gcloud container clusters create ${_CLUSTER_NAME} \
       --num-nodes=${_NODE_COUNT} \
       --zone=${_ZONE} \
