--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -96,8 +96,8 @@ steps:
 
     # Backup details
     BACKUP_DIR="/tmp/mongodb_backup"
-    TIMESTAMP=\$(date +"%Y%m%d_%H%M%S")
-    BACKUP_FILENAME="mongodb_backup_\$TIMESTAMP.gz"
+    TIMESTAMP=\$$(date +"%Y%m%d_%H%M%S")
+    BACKUP_FILENAME="mongodb_backup_\$${TIMESTAMP}.gz"
 
     # GCS bucket details
     GCS_BUCKET="${_BACKUP_BUCKET}"
