--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -85,38 +85,41 @@ steps:
   args:
   - '-c'
   - |
-    cat > mongodb_backup.sh << EOL
+    cat > mongodb_backup.sh << 'EOL'
     #!/bin/bash
 
     # MongoDB connection details
     MONGO_HOST="localhost"
     MONGO_PORT="27017"
     MONGO_USER="admin"
-    MONGO_PASS="\$(gcloud secrets versions access latest --secret=mongodb-password)"
+    MONGO_PASS="$(gcloud secrets versions access latest --secret=mongodb-password)"
 
     # Backup details
     BACKUP_DIR="/tmp/mongodb_backup"
-    TIMESTAMP=\$$(date +"%Y%m%d_%H%M%S")
-    BACKUP_FILENAME="mongodb_backup_\$${TIMESTAMP}.gz"
+    TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
+    BACKUP_FILENAME="mongodb_backup_${TIMESTAMP}.gz"
 
     # GCS bucket details
     GCS_BUCKET="${_BACKUP_BUCKET}"
 
     # Create backup
-    mongodump --host \$MONGO_HOST --port \$MONGO_PORT --username \$MONGO_USER --password \$MONGO_PASS --out \$BACKUP_DIR
+    mongodump --host $MONGO_HOST --port $MONGO_PORT --username $MONGO_USER --password $MONGO_PASS --out $BACKUP_DIR
 
     # Compress backup
-    tar -zcvf \$BACKUP_FILENAME -C \$BACKUP_DIR .
+    tar -zcvf $BACKUP_FILENAME -C $BACKUP_DIR .
 
     # Upload to GCS bucket
-    gsutil cp \$BACKUP_FILENAME gs://\$GCS_BUCKET/
+    gsutil cp $BACKUP_FILENAME gs://$GCS_BUCKET/
 
     # Clean up
-    rm -rf \$BACKUP_DIR
-    rm \$BACKUP_FILENAME
+    rm -rf $BACKUP_DIR
+    rm $BACKUP_FILENAME
 
-    echo "Backup completed and uploaded to gs://\$GCS_BUCKET/\$BACKUP_FILENAME"
+    echo "Backup completed and uploaded to gs://$GCS_BUCKET/$BACKUP_FILENAME"
     EOL
+
+    # Replace _BACKUP_BUCKET placeholder with actual value
+    sed -i 's/${_BACKUP_BUCKET}/'${_BACKUP_BUCKET}'/g' mongodb_backup.sh
     
 # Step 6: Set up MongoDB backup script
 - name: 'gcr.io/cloud-builders/gcloud'
