--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -102,11 +102,11 @@ steps:
     EOL
     
     # Copy files to the MongoDB VM
-    gcloud compute scp mongodb_backup.sh mongodb_backup.service mongodb-vm:/home/mongodb_user/ --zone=${_ZONE}
+    gcloud compute scp mongodb_backup.sh mongodb_backup.service mongodb-vm:/tmp/ --zone=${_ZONE}
     
     # Set up the backup script and service on the MongoDB VM
     gcloud compute ssh mongodb-vm --zone=${_ZONE} --command="
-      sudo mv /home/mongodb_user/mongodb_backup.sh /usr/local/bin/mongodb_backup.sh && \
+      sudo mv /tmp/mongodb_backup.sh /usr/local/bin/mongodb_backup.sh && \
       sudo chmod +x /usr/local/bin/mongodb_backup.sh && \
       sudo mv /home/mongodb_user/mongodb_backup.service /etc/systemd/system/mongodb_backup.service && \
       echo '$$MONGODB_PASSWORD' | sudo tee /etc/mongodb_backup_password > /dev/null && \
