--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -71,10 +71,8 @@ steps:
     set -e
     if gsutil ls -b gs://${_BACKUP_BUCKET} &>/dev/null; then
       echo "Backup bucket exists. Renaming..."
-      TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
-      NEW_BUCKET_NAME="${_BACKUP_BUCKET}-ARCHIVE-$TIMESTAMP"
-      gsutil mv gs://${_BACKUP_BUCKET} gs://$NEW_BUCKET_NAME
-      echo "Renamed existing bucket to $NEW_BUCKET_NAME"
+      gsutil mv gs://${_BACKUP_BUCKET} gs://${_BACKUP_BUCKET}-ARCHIVE-$(date +"%Y%m%d_%H%M%S")
+      echo "Renamed existing bucket to ${_BACKUP_BUCKET}-ARCHIVE-$(date +"%Y%m%d_%H%M%S")"
     else
       echo "Backup bucket does not exist."
     fi
