--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -72,7 +72,7 @@ steps:
     if gsutil ls -b gs://${_BACKUP_BUCKET} &>/dev/null; then
       echo "Backup bucket exists. Archiving..."
       gsutil mb -p ${PROJECT_ID} gs://${ARCHIVE_BUCKET}
-      gsutil -m rsync -r gs://${_BACKUP_BUCKET} gs://${ARCHIVE_BUCKET}
+      gsutil -m rsync -r gs://${_BACKUP_BUCKET}-ARCHIVE-$(date +"%Y%m%d_%H%M%S")
       gsutil rm -r gs://${_BACKUP_BUCKET}
       echo "Bucket Archived"
     else
