--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,12 +10,12 @@ steps:
     set -e
     if gsutil ls -b gs://${_BACKUP_BUCKET} &>/dev/null; then
       echo "Backup bucket exists. Archiving..."
-      if ! gsutil ls -b gs://${_BACKUP_BUCKET}-OLD &>/dev/null; then
-        gsutil mb -p ${PROJECT_ID} gs://${_BACKUP_BUCKET}-OLD
+      if ! gsutil ls -b gs://ARCHIVE &>/dev/null; then
+        gsutil mb -p ${PROJECT_ID} gs://$ARCHIVE
       fi
-      gsutil -m rsync -r gs://${_BACKUP_BUCKET} gs://${_BACKUP_BUCKET}-OLD
+      gsutil -m rsync -r gs://${_BACKUP_BUCKET} gs://ARCHVIE
       gsutil rm -r gs://${_BACKUP_BUCKET}
-      echo "Bucket Archived"
+      echo "Bucket Archived to ARCHIVE"
     else
       echo "Backup bucket does not exist."
     fi
