--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,12 +10,12 @@ steps:
     set -e
     if gsutil ls -b gs://${_BACKUP_BUCKET} &>/dev/null; then
       echo "Backup bucket exists. Archiving..."
-      if ! gsutil ls -b gs://ARCHIVE &>/dev/null; then
-        gsutil mb -p ${PROJECT_ID} gs://ARCHIVE
+      if ! gsutil ls -b gs://${PROJECT_ID}-archive &>/dev/null; then
+        gsutil mb -p ${PROJECT_ID} gs://${PROJECT_ID}-archive
       fi
-      gsutil -m rsync -r gs://${_BACKUP_BUCKET} gs://ARCHVIE
+      gsutil -m rsync -r gs://${_BACKUP_BUCKET} gs://${PROJECT_ID}-archive
       gsutil rm -r gs://${_BACKUP_BUCKET}
-      echo "Bucket Archived to ARCHIVE"
+      echo "Bucket Archived to ${PROJECT_ID}-archive"
     else
       echo "Backup bucket does not exist."
     fi
